# keyboxd

./: .gitignore  .gitmodules  CMakeLists.txt  README-CN.md  README.md  base-device.cpp  base-device.hpp  base64.cpp  base64.h  buffer-utils.hpp  check_install.command  device-manager.cpp  device-manager.hpp  gen_mac_bundle.sh  local-device.cpp  local-device.hpp  main.cpp  rpc-server.cpp  rpc-server.hpp  usb-device.cpp  usb-device.hpp
mac/: components.plist  org.keyboxwallet.daemon.plist
mac/scripts/: postinstall
qt/: CMakeLists.txt  components.plist  distribution.xml  dmg_spec.json  icon.icns  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  org.keyboxwallet.daemon.plist  resource.h
qt/i18n/: keyboxd_ui_la.zh_Hans_CN.qm  keyboxd_ui_la.zh_Hans_CN.ts
qt/scripts/: postinstall  preinstall
windows/: install.bat  keyboxd-service.xml  uninstall.bat
